Fixed parsing response from way for pay (#1422)