@@ -219,13 +219,14 @@ public class OrderController {
     @PostMapping("/receivePayment")
     public PaymentResponseWayForPay receivePayment(@RequestBody String response,
         HttpServletResponse servlet) throws IOException {
-        log.info("Incoming request Way For Pay API" + servlet.toString());
+        log.info("Incoming request Way For Pay API {}", servlet.toString());
         String decodedResponse =
-            URLDecoder.decode(response, StandardCharsets.UTF_8);
+            URLDecoder.decode(response, StandardCharsets.UTF_8.name());
+        log.info("Decoded response: {}", decodedResponse);
         ObjectMapper objectMapper = new ObjectMapper();
         PaymentResponseDto paymentResponseDto =
             objectMapper.readValue(decodedResponse, PaymentResponseDto.class);
-
+        log.info("Payment response DTO: {}", paymentResponseDto);
         if (HttpStatus.OK.is2xxSuccessful()) {
             servlet.sendRedirect(redirectionConfigProp.getGreenCityClient());
         }
